# voice-changer

./: .gitignore  AberthRoots.cpp  AberthRoots.h  AboutDialog.cpp  AboutDialog.h  AudioTrack.cpp  AudioTrack.h  AudioTrackPlayer.cpp  AudioTrackPlayer.h  CMakeLists.txt  Exception.h  FilterDesign.cpp  FilterDesign.h  GlottalModel.cpp  GlottalModel.h  GlottalSource.cpp  GlottalSource.h  LICENSE  Lpc.cpp  Lpc.h  LpcTrack.cpp  LpcTrack.h  Noise.cpp  Noise.h  README.md  VoiceChangerApp.cpp  VoiceChangerApp.h  VoiceChangerController.cpp  VoiceChangerController.h
header_libs/: SpeexResampler.h
png2c/: Functions.cmake  png2c.py
reaper/: reaper.cc  reaper.h
reaper/core/: file_resource.cc  track.cc  track.h
reaper/epoch_tracker/: epoch_tracker.cc  epoch_tracker.h  fd_filter.cc  fft.cc  lpc_analyzer.cc
